--- a/report/src/sections/03-related-work.tex
+++ b/report/src/sections/03-related-work.tex
@@ -4,7 +4,7 @@
 
 
 \subsection{Single Secret Leader Election}\label{sec:related-work-SSLE}
-A~\gls{ssle} is a protocol where a group of participants randomly elects only one leader from the group.
+An~\gls{ssle} is a protocol where a group of participants randomly elects only one leader from the group.
 The identity of the leader is kept secret from all other participants so only the leader themselves know that they have been chosen.
 The elected leader can then later publicly prove that they have been elected~\cite{10.1145/3419614.3423258}.
 
@@ -18,7 +18,7 @@ One~\gls{pos} blockchain that uses an~\gls{ssle} is Polkadot which uses Safrole 
 Safrole is the production version of the research protocol Sassafras~\cite{sassafras}.
 In this, validators each produce a number of tickets, some of which are winning, depending on some threshold.
 A~\gls{zk-snark} is then used to prove that a ticket is winning, after which the winning tickets are published to the chain.
-A randomization algorithm will then pick, from all the winning tickets, proposers for all the slots two epochs later.
+A randomization algorithm will then pick proposers from all the winning tickets for all the slots two epochs later.
 
 
 
@@ -40,17 +40,17 @@ The Feistel shuffle was later replaced by the shuffle proposed by Larsen et al.~
 Ethereum mentioned the reason for this to be that the shuffle by Larsen et al.\ provides a simpler protocol~\cite{Whisk2024}.
 
 \subsection{Bulletproofs}\label{subsec:related-work-bulletproofs}
-A big inspiration for the Curdleproofs protocol is bulletproofs~\cite{bunz2018bulletproofs}.
-Bulletproofs is a type of range proof that uses inner product arguments to prove that a committed value is within a certain range without revealing the value itself.
-Bulletproofs is in itself not a zero-knowledge proof system, but with the help of Fiat Shamir~\cite{bunz2018bulletproofs} it can be used to create a zero-knowledge proof.
-Bulletproofs also has had a few iterations and improvements to increase the speed and reduce the size of the proof since it was used in curdleproofs.
+A big inspiration for the Curdleproofs protocol is Bulletproofs~\cite{bunz2018bulletproofs}.
+Bulletproofs is a type of range proof that uses~\glspl{ipa} to prove that a committed value is within a certain range without revealing the value itself.
+Bulletproofs is in itself not a~\gls{zkp} system, but with the help of Fiat Shamir~\cite{bunz2018bulletproofs} it can be used to create a~\gls{zkp}.
+Bulletproofs also has had a few iterations and improvements to increase the speed and reduce the size of the proof since it was used in Curdleproofs.
 
-One of these is Bulletproofs+~\cite{chung2022bulletproofs+} which uses a weighted inner product argument instead of the standard inner product argument to achieve a better performance.
-Bulletproofs+ is also a zero-knowledge proof by itself unlike the original bulletproofs.
-Trying to modify Curdleproofs with the weighted inner product argument introduces complications that would need larger modifications and is therefore not suitable.
+One of these is Bulletproofs+~\cite{chung2022bulletproofs+} which uses a~\gls{wipa} instead of the standard~\gls{ipa} to achieve a better performance.
+Bulletproofs+ is also a~\gls{zkp} by itself unlike the original Bulletproofs.
+Trying to modify Curdleproofs with the~\gls{wipa} introduces complications that would need larger modifications and is therefore not suitable.
 This can be seen in Appendix~\ref{app:curdleproofs-weighted-inner-product-argument-modification-attempt}
 
 A third version of the Bulletproofs protocol is Bulletproofs++~\cite{eagen2024bulletproofs++} which uses a new type of argument called the norm argument to achieve a better performance.
 This comes from the prover only needing to commit to a single vector, rather than two.
-Therefore, with the two vectors, $x$ and $y$ of a standard~\gls{ipa}, they need to assume $x=y$ for their protocol to work.
+Therefore, with the two vectors, $x$ and $y$ of a standard~\gls{ipa}, they need to assume~$x=y$ for their protocol to work.
 Then, along with the norm being weighted, which raises the same complications as with Bulletproofs+, this makes it unsuitable for Curdleproofs.
