--- a/report/src/setup/acronyms.tex
+++ b/report/src/setup/acronyms.tex
@@ -27,7 +27,7 @@
 \newacronym{sameperm}{SamePerm}{Same Permutation}
 \newacronym{samemsm}{SameMSM}{Same Multiscalar Multiplication}
 \newacronym{rrc}{RRC}{re-randomizable commitment}
-\newacronym{eth}{ETH}{Ether}
+\newacronym{eth}{ETH}{ether}
 \newacronym{grandprod}{GrandProd}{Grand Product}
 \newacronym{dlipa}{DL IPA}{Discrete-Logarithm Inner Product Argument}
 \newacronym{wipa}{WIPA}{Weighted Innner Product Argument}
