--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -1,27 +1,25 @@
 \section{approach}\label{sec:approach}
-
 As explained in~\autoref{sec:background}, Curdleproofs makes use of three different proofs.
-This work focuses on improving the underlying~\gls{ipa}, especially the running time and proof size of the protocol are of interest.
-The following is our approach to, how we modified the~\gls{ipa}.
+This work focuses on improving the underlying~\glspl{ipa}, especially the running time and proof size of the protocol are of interest.
+The following is our approach to how we modified the~\glspl{ipa}, with focus on the~\gls{dlipa}.
 
 \subsection{Springproofs}\label{sec:approach-springproofs}
 The Springproofs protocol~\cite{zhang2024springproofs} can be used very effectively in solving the problem stated in~\autoref{subsec:problem-definition}.
 The theory of Springproofs provides support for~\glspl{ipa} to use vectors of arbitrary length.
-Using the findings of Springproofs means Curdleproofs could be used on shuffle sizes other than powers of two.
+Using the findings of Springproofs means Curdleproofs could be used with shuffle sizes other than powers of two.
 As such, they could lower the shuffle size from the current 128 to a size significantly lower, given it is still secure.
-Seeing the proof size of Curdleproofs being dependent on $\ell$ means that this modification would greatly help in lowering it.
 
 One of the most notable findings in Springproofs is the usage of their so-called scheme function.
 This function is used to ensure that the~\gls{ipa} eventually will fold down to a vector of size 1.
 In a general~\gls{ipa}, Curdleproofs included, if the size of the vectors were not a power of two, the argument would not recursive down to size 1, as they work by halving the vectors every recursive round.
 
 
-The core concept of the Springproofs scheme function is to split the vectors into sets, $T,S$ before each recursive round of the protocol.
-Then, the fold for that round is only done on one of the two sets, $T$, before the other set, $S$, is appended again at the end of the recursive round.
+The core concept of the Springproofs scheme function is to split the vectors into sets, $T$ and $S$ before each recursive round of the protocol.
+Then, the fold for that round is only done on one of the two sets,~$T$, before the other set,~$S$, is appended again at the end of the recursive round.
 
 Springproofs present different scheme functions and prove some of them to be optimal.
 One of these optimal functions is an optimized version of their \textit{pre-compression method}, which splits the vectors as seen in~\autoref{lst:schemefunc}.
-The computation is for finding the set, $T$.
+The computation is for finding the set,~$T$.
 
 \begin{figure}[!htb]
     \begin{lstlisting}[language=Python,mathescape=true,label={lst:schemefunc},numbers=right,caption={Scheme function \textbf{\textit{f}} used in CAAUrdleproofs},captionpos=b,frame=single]
@@ -41,8 +39,8 @@ The computation is for finding the set, $T$.
 \end{figure}
 
 This can also visually be seen in~\autoref{fig:fold}(b), which is figure 1 of the Springproofs paper~\cite{zhang2024springproofs}.
-In \autoref{fig:fold}(a) is a scheme function which simply pads the vector to the next power of two before running an~\gls{ipa}.
-If one wanted to run current~\glspl{ipa}s on vector that are not a power of two, this would generally be the easiest way to achieve that.
+In \autoref{fig:fold}(a) is a scheme function that simply pads the vector to the next power of two before running an~\gls{ipa}.
+If one wanted to run current~\glspl{ipa} on vectors that are not a power of two, this would generally be the easiest way to achieve that.
 Though, this defeats the attempt of lowering the proof size, as it would now correspond to running an~\gls{ipa} on the size of the next power of two.
 
 \begin{figure*}[!htb]
@@ -54,7 +52,7 @@ Though, this defeats the attempt of lowering the proof size, as it would now cor
     \label{fig:fold}%
 \end{figure*}
 
-It is notable to mention that using the folding as shown in~\autoref{fig:fold}(b) results in the second recursive round being a size corresponding to a power of two.
+It is worth mentioning that using the folding as shown in~\autoref{fig:fold}(b) results in the second recursive round being a size corresponding to a power of two.
 This means that the rest of the protocol will run as a general~\gls{ipa}, without the actual need for splitting the vectors, which can also be seen in~\autoref{lst:schemefunc}.
 
 \subsection{CAAUrdleproofs}\label{subsec:approach-CAAUrdleproofs}
@@ -112,7 +110,7 @@ In line 2, the prover gets the cryptographic generators, $\mathbf{G}$, $\mathbf{
 To ensure zero-knowledge, two blinding vectors for each commitment are constructed on lines 3--4.
 These are also given the properties, $(\mathbf{r}_C\times \mathbf{d}+\mathbf{r}_D\times \mathbf{c})=0$~and~ $\mathbf{r}_C\times\mathbf{r}_D=0$, ensuring the completeness of the protocol.
 
-After this, commitments of the blinding vectors are constructed as $B_C$ and $B_D$, on lines 5--6.
+After this, commitments to the blinding vectors are constructed as $B_C$ and $B_D$, on lines 5--6.
 These will eventually be used for verification by the verifier.
 
 From the public input, hash values $\alpha,\beta$ are then computed on line 7.
@@ -134,7 +132,7 @@ This value is used on lines 26--29 for completing the folding of $\mathbf{c},\ma
 We do the fold as in the original Curdleproofs protocol, while also appending the elements of $S$ back onto the vectors.
 The figure shows a concatenation, but it is important to know that the vectors are appended together as shown in~\autoref{fig:fold}(b).
 
-At last, on line 30,~$n$ is updated to the length of the concatenated vectors before starting a new round.
+At the end of the recursive round, on line 30,~$n$ is updated to the length of the concatenated vectors before starting a new round.
 
 The result of this is a proof,~$\mathbf{\pi}$, constructed in $\lceil \log n \rceil$ rounds, but with the proof size being smaller than if the shuffle size was a power of 2.
 
@@ -196,7 +194,7 @@ The reason being that on lines 7--8 in~\autoref{lst:ipa-prover}, the witness vec
 Those modifications mean that the commitments~$C$ and~$D$ need to be commitments to the modified witnesses instead.
 
 The setup phase is now done, and the verifier has to also run a recursive protocol, which is shown in step 2.
-First, the vectors are on line 13 divided into the two sets,~$|T|,|S|$, as in~\autoref{lst:ipa-prover}.
+First, the vectors are, on line 13, divided into the two sets,~$T$ and $S$, as in~\autoref{lst:ipa-prover}.
 After this, the group vectors are in lines 14--16 split in according to those sets, along with updating~$n$ to be half the size of~$T$.
 
 The verifier then, on line 17, retrieves from the proof the cross-product commitment update values for the given round,~$L_{C,j},L_{D,j},R_{C,j},R_{D,j}$.
@@ -224,8 +222,8 @@ If so, the verifier accepts the proof.
 
 
 \subsection{Shuffle security}\label{subsec:approach-shuffle-security}
-The shuffle method proposed by Larsen et al.~\cite{cryptoeprint:2022/560} that was used in Curdleproofs is based on the idea of shuffling a list of proposers over a set of slots.
-A formal definition of the shuffle is given in~\autoref{fig:shuffle}~\cite{cryptoeprint:2022/560}.
+The shuffle method proposed by Larsen et al.~\cite{cryptoeprint:2022/560} that is used in Curdleproofs is based on the idea of shuffling a list of proposers over a set of slots.
+A formal definition of the shuffle is given in~\autoref{fig:shuffle}.
 
 \begin{figure}[!htb]
 \begin{framed}
@@ -264,7 +262,7 @@ The shuffle is secure if none of the following two events occur.
 The first event is a short backtracking, where an adversary can find the original ciphertexts from the shuffled ciphertexts.
 Since the subsets of ciphertexts are chosen randomly in each shuffle, if there are enough adversarial shufflers in a row at the end of the process, then a short backtracking is possible.
 
-The second event that can occur is related to the fact that every shuffle distributes the possibility of a certain ciphertext to be in a certain slot.
+The second event that can occur is related to the fact that every shuffle distributes the probability of a certain ciphertext to be in a certain slot.
 So, if a shuffle contains a lot of ciphertexts with a larger than average chance of containing a certain ciphertext, then that would imply that there is a higher chance of that ciphertext being in that slot.
 
 It is theoretically possible to find a number of shuffles, given the shuffle size, and a number of adversarial shufflers, to guarantee that the shuffle is secure.
@@ -277,7 +275,7 @@ It is, however, possible to find lower secure values for $T$ and $\ell$, but thi
 
 
 \subsection{Implementation}\label{subsec:approach-implementation}
-Implementing the above-explained CAAUrdleproofs protocol introduced some optimizations required to have the code run as fast as possible.
+Implementing the above-explained CAAUrdleproofs protocol required some optimizations, made by Curdleproofs, to have the code run as fast as possible.
 These are explained in the following with a focus on how CAAUrdleproofs differentiates itself from Curdleproofs.
 Both our implementation of CAAUrdleproofs and the experiment involving the security of the shuffle are publicly available on GitHub~\footnote{\href{https://github.com/AAU-Dat/curdleproofsplus/tree/SIPA}{https://github.com/AAU-Dat/curdleproofsplus/tree/SIPA}}.
 The implementation of CAAUrdleproofs is a fork of and builds directly on the already existing Curdleproofs code.
@@ -295,7 +293,7 @@ In each recursive round, both the folded vectors and the commitments are being m
 To keep track of which elements of the vectors are multiplied by each $\gamma_j$, a function called \texttt{get\_verification\_scalars\_bitstring} is used.
 The output of this function is a list of length $\ell$, each element with a list corresponding to the rounds in which $\gamma_j$ was multiplied to the element.
 Curdleproofs' implementation is simpler than CAAUrdleproofs' in this case.
-As Curdleproofs works on powers of two, it is always the right half of the vectors in each round that are multiplied by the challenge.
+As Curdleproofs only works on powers of two, it is always the right half of the vectors in each round that are multiplied by the challenge.
 
 The multiplication of challenges on each element is not as easily trackable in the CAAUrdleproofs protocol.
 Here, it is necessary to simulate a run though the recursive protocol.
@@ -386,9 +384,9 @@ Each cup contains an amount of water between 0 and 1.
 
 An experiment run starts with the first cup being full and the rest being empty.
 As mentioned, $\alpha$ cups are tracked by an adversary, the first $n-\alpha$ cups are called active cups, while the last $\alpha$ cups are tracked.
-So, at each shuffle, the shuffler randomly picks $\ell$ ciphertexts and shuffles them, also randomly.
-Meanwhile, an average of the water between the active indices of the $\ell$-shuffle is found.
-All active indices are given this amount of water.
+So, at each shuffle, the shuffler randomly picks $\ell$ ciphertexts and shuffles them.
+Meanwhile, an average of the water between the active cups of the $\ell$-shuffle is found.
+All active cups are given this amount of water.
 
 Now, after each shuffle, if any cup has more than $2/(n-\alpha)$ water, its position can be predicted by the adversary, hence the shuffle is insecure~\cite{cryptoeprint:2022/560}.
 If a position can be predicted, another round of shuffling is performed.
@@ -402,23 +400,23 @@ By repeating this experiment for several runs, one can experimentally say, when 
 If we can reduce the shuffle size used in Whisk and still prove it secure, then we expect to see some reduction in the size overhead on the blockchain.
 
 We first set our focus on Curdleproofs, as this is the protocol we have modified directly.
-As mentioned in~\autoref{subsec:related-work-whisk}, the size of Curdleproofs is $18+10 \log(\ell+4)\mathbb{G}$, $7\mathbb{F}$.
+As mentioned in~\autoref{subsec:related-work-whisk}, the size of Curdleproofs is $(18+10 \log(\ell+4))\mathbb{G}+7\mathbb{F}$.
 The dependence on the $\log$ stems from the number of recursive rounds that take place in the~\gls{sameperm} and~\gls{samemsm} proofs.
 The addition of four elements in the $\log$ stems from the protocol needing those as blinders.
 Hence, at a proof of size 128, $\ell$ is 124.
 In the proof of theorem 1, see Appendix~\ref{sec:appendix-thm1proof}, we show that CAAUrdleproofs is $\mathcal{O}(\log n)$, which is the same as Curdleproofs.
 However, as discussed in~\autoref{subsec:approach-CAAUrdleproofs}, CAAUrdleproofs'~\gls{ipa} proofs use $\lceil \log n \rceil$ recursive rounds.
-This means that the size of CAAUrdleproofs must be $18+10 \lceil\log(\ell+4)\rceil\mathbb{G}$, $7\mathbb{F}$.
+This means that the size of CAAUrdleproofs must be $(18+10 \lceil\log(\ell+4)\rceil)\mathbb{G}+7\mathbb{F}$.
 
 CAAUrdleproofs therefore has the same proof size as Curdleproofs.
 
-The CAAUrdleproofs modification can still reduce the overall block size overhead, though.
+The CAAUrdleproofs modification can still reduce the overall block size overhead.
 By using the overhead calculation described by Whisk on CAAUrdleproofs, it measures a block overhead of $16.656$ KB, when the shuffle size is 128~\cite{Whisk2024}.
 Note that this is the same size as Curdleproofs, as the shuffle size is a power of 2.
 The provided calculation of the block overhead is provided as the following, where $\mathbb{G}=48$ bytes and $\mathbb{F}=32$ bytes\footnote{\text{As noted in the code on the Curdleproofs GitHub repository: }\\ \href{https://github.com/asn-d6/curdleproofs/blob/main/src/whisk.rs}{https://github.com/asn-d6/curdleproofs/blob/main/src/whisk.rs}. Accessed: 26/05/2025}:
 \begin{itemize}
     \item List of shuffled trackers ($\ell\cdot96\Rightarrow\text{eg. }124\cdot96=11,904$ bytes).
-    \item Shuffle proof ($18+10 \lceil\log(\ell+4)\rceil\mathbb{G}$, $7\mathbb{F}\Rightarrow\text{eg. }(18+10\lceil\log(124+4)\rceil)\cdot48+7\cdot32=4,448$ bytes).
+    \item Shuffle proof ($(18+10 \lceil\log(\ell+4)\rceil)\mathbb{G}+7\mathbb{F}\Rightarrow\text{eg. }(18+10\lceil\log(124+4)\rceil)\cdot48+7\cdot32=4,448$ bytes).
     \item A fresh tracker (two BLS G1 points $\Rightarrow48\cdot2=96$ bytes).
     \item A new commitment $com(k)$ to the proposer's tracker (one BLS G1 point $\Rightarrow48$ bytes).
     \item A Discrete Logarithm Equivalence Proof on the ownership of the elected proposer commitment (two G1 points, two Fr scalars $\Rightarrow2\cdot48+2\cdot32=160$ bytes).
