--- a/report/src/sections/05-experimental-protocol.tex
+++ b/report/src/sections/05-experimental-protocol.tex
@@ -17,22 +17,19 @@ The parameter that we want to change between benchmark runs is the shuffle size,
 
 In CAAUrdleproofs, we will test the protocol with $\ell=\{8,9,\dots,256\}$.
 
-Since Curdleproofs is unable to run benchmarks, unless the shuffle size is a power of two, those benchmarks will be run on values $\ell=\{8,16,32,64,128,256\}$.
+Since Curdleproofs is unable to run benchmarks, unless the shuffle size is a power of two, those benchmarks will be run on values $\ell=2^N$, where $N=\{3,4,5,6,7,8\}$.
 
 
 
 
 \subsection{Shuffle security}\label{subsec:experimental-protocol-shuffle-security}
-In this experiment we run the shuffle protocol with varying shuffle sizes and varying number of adversarial tracked ciphertexts.
+In this experiment, we run the shuffle protocol with varying shuffle sizes and varying numbers of adversarial tracked ciphertexts.
 The purpose of this experiment is to find the lowest possible shuffle size that is still secure against adversarial tracking.
-We therefore run the experiment with shuffle sizes, $\ell$, between 64 and 128.
+We therefore run the experiment with shuffle sizes,~$\ell$, between 32 and 512.
 For the number of adversarial tracked ciphertexts, we use the values $\alpha=\{1/2,1/3,1/4\}$
 
-Because Curdleproofs is meant to be used in an Ethereum setting, all the experiments were done with a maximum of 8192 shuffles.
+Because Curdleproofs is meant to be used in an Ethereum setting, a maximum of 8,192 shuffles is available.
+Though, we will keep running the shuffling experiments until they are deemed secure.
 Also, the experiments shuffle over a set of 16,384 ciphertexts.
 Both of these numbers come from the Ethereum Whisk proposal~\cite{Whisk2024}.
-
-
 Every experiment is run 1000 times to avoid statistical uncertainty.
-As done by the shuffle authors~\cite{cryptoeprint:2022/560}, we will denote the 20th, 40th, 60th, 80th, and 100th percentile on when the shuffle is deemed secure by the experimental runs.
-
