--- a/report/src/sections/07-discussion.tex
+++ b/report/src/sections/07-discussion.tex
@@ -39,12 +39,12 @@ When looking at the results of the shuffle security experiment in \autoref{fig:s
 Even when taking into account the worst case scenario from our experiment, the shuffle will still be secure with an~$\ell$ as low as 42 within the 8192 shuffles available with an $\alpha$ of 8192.
 
 We would however not recommend using an~$\ell$ lower than 80, as here the worst case scenario needs a little under half the available shuffles to be honest in order to be secure.
-As seen in~\autoref{fig:shufflesecurity} you would also only need a third of the 8192 shuffles to be honest to get within the one standard deviation.
+As seen in~\autoref{fig:shufflesecurity} you would also only need a third of the 8192 shuffles to be honest to get within the standard deviation.
 This would still lead to a reduction of the proving time of 62.69ms, which is 74.25\% of the current Curdleproofs time and a reduction in the verifying time of 0.89ms, which is 96.11\% of the current Curdleproofs time.
 It would also reduce the size of the block overhead from 16.656KB to 12.048KB.
-Only 72.33\% of the currently calculated size for Curdleproofs.
+This being only 72.33\% of the current size for Curdleproofs.
 This would result in saving $\sim 12.11$GB of space on the blockchain each year.
-Some other things to keep in mind when deciding on how many honest shuffles should be necessary to make the shuffle secure is that there are other factors that can affect the security of the blockchain.
+Some other things to keep in mind when deciding on how many honest shuffles should be necessary to make the shuffle secure are that there are other factors that can affect the security of the blockchain.
 One of such factors is some of the known attacks that take advantage of controlling a large number of validators.
 Attacks like the $\geq50\%$ stake attack and the $33\%$ finality attack~\cite{EthereumAttackDefense2024} take advantage of controlling a large number of validators in order to negatively affect the blockchain system.
 Because of attacks like these, which rely on controlling a large number of validators, we would recommend, when evaluating how many honest shuffles are necessary to make the shuffle secure; one should also take into account how many honest validators are necessary to make the blockchain secure.
@@ -53,7 +53,7 @@ Another thing to keep in mind is that within the Ethereum system not every valid
 Some nodes contain multiple validators, and this means that during the shuffling phase, when selecting the 16384 possible proposers, there is a chance that a single node controls multiple of the chosen validators.
 This is also possible during the selecting of the shufflers.
 
-From the results we see that the mean starts higher and ends lower for the experiments with a higher $\alpha$.
+From the results, in~\autoref{fig:shufflesecurity}, we see that the mean starts higher and ends lower for the experiments with a higher $\alpha$.
 One of the reasons for this could be the relationship between the number of adversarial tracked cups and the threshold necessary before the shuffle is secure.
 Since the threshold is $2/(n-\alpha)$, the higher $\alpha$ is, the higher the threshold for the amount of water allowed in any cup.
 Therefore, the higher $\alpha$ is, the harder it is to get the water divided into the honest cups.
