--- a/report/src/sections/00-abstract.tex
+++ b/report/src/sections/00-abstract.tex
@@ -2,13 +2,13 @@
 \begin{abstract}
     Ethereum is one of the leading Proof-of-Stake blockchains.
     However, it is still vulnerable to attacks.
-    One such attack is the de-anonymization attack by Heimbach et al.~where an adversary could get validator IP addresses and then perform a denial-of-service attack on them.
+    One such attack is the de-anonymization attack by Heimbach et al., where an adversary can obtain validator IP addresses and then perform a Denial-of-Service attack on them.
     To try and combat this attack, Ethereum has proposed the use of the Whisk protocol.
     Whisk is a Single Secret Leader Election protocol that uses a zero-knowledge proof called Curdleproofs that uses Inner Product Arguments to prove the validity of a shuffle of validators.
-    This paper improves upon Curdleproofs' Inner Product Arguments by introducing CAAUrdleproofs, which is a modified version of Curdleproofs with ideas from Springproofs as to overcome the limitations of Curdleproofs regarding the shuffle size.
+    This paper improves upon Curdleproofs' Inner Product Arguments by introducing CAAUrdleproofs, a modified version of Curdleproofs incorporating ideas from Springproofs to address the limitations of Curdleproofs regarding shuffle size.
     We show that CAAUrdleproofs has similar proving and verifying times to Curdleproofs when the shuffle size is a power of two.
-    We also show that CAAUrdleproofs has a performance advantage for any shuffle size that is not a power of two, and that this advantage grows the lower the shuffle size is below a power of two.
-    After performing experiments, we also suggest a new shuffle size which is smaller than the current one used in Curdleproofs that would result in a smaller block overhead than the one created by the current Curdleproofs protocol.
+    We also demonstrate that CAAUrdleproofs has a performance advantage for any shuffle size that is not a power of two and that this advantage increases as the shuffle size decreases below a power of two.
+    After performing experiments, we also suggest a new shuffle size, which is smaller than the current one used in Curdleproofs, resulting in a more negligible block overhead than the one created by the current Curdleproofs protocol.
     All this is done while still preserving the anonymity of validators.
 
 \end{abstract}
