--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -1,20 +1,20 @@
-\section{approach}\label{sec:approach}
+\section{Approach}\label{sec:approach}
 As explained in~\autoref{sec:background}, Curdleproofs makes use of three different proofs.
-This work focuses on improving the underlying~\glspl{ipa}, especially the running time and proof size of the protocol are of interest.
-The following is our approach to how we modified the~\glspl{ipa}, with focus on the~\gls{dlipa}.
+This work focuses on improving the underlying~\glspl{ipa}, with a particular interest in the protocol's running time and proof size.
+The following outlines our approach to modifying the~\glspl{ipa}, with a focus on the~\gls{dlipa}.
 
 \subsection{Springproofs}\label{sec:approach-springproofs}
 The Springproofs protocol~\cite{zhang2024springproofs} can be used very effectively in solving the problem stated in~\autoref{subsec:problem-definition}.
 The theory of Springproofs provides support for~\glspl{ipa} to use vectors of arbitrary length.
 Using the findings of Springproofs means Curdleproofs could be used with shuffle sizes other than powers of two.
-As such, they could lower the shuffle size from the current 128 to a size significantly lower, given it is still secure.
+As such, they could lower the shuffle size from the current 128 to a significantly smaller size, provided it remains secure.
 
 One of the most notable findings in Springproofs is the usage of their so-called scheme function.
 This function is used to ensure that the~\gls{ipa} eventually will fold down to a vector of size 1.
-In a general~\gls{ipa}, Curdleproofs included, if the size of the vectors were not a power of two, the argument would not recursive down to size 1, as they work by halving the vectors every recursive round.
+In a general~\gls{ipa}, Curdleproofs included, if the size of the vectors were not a power of two, the argument would not recurse down to size 1, as they work by halving the vectors every recursive round.
 
 
-The core concept of the Springproofs scheme function is to split the vectors into sets, $T$ and $S$ before each recursive round of the protocol.
+The core concept of the Springproofs scheme function is to split the vectors into sets, $T$ and $S$, before each recursive round of the protocol.
 Then, the fold for that round is only done on one of the two sets,~$T$, before the other set,~$S$, is appended again at the end of the recursive round.
 
 Springproofs present different scheme functions and prove some of them to be optimal.
@@ -38,10 +38,10 @@ The computation is for finding the set,~$T$.
 \label{fig:schemefunc}
 \end{figure}
 
-This can also visually be seen in~\autoref{fig:fold}(b), which is figure 1 of the Springproofs paper~\cite{zhang2024springproofs}.
-In \autoref{fig:fold}(a) is a scheme function that simply pads the vector to the next power of two before running an~\gls{ipa}.
-If one wanted to run current~\glspl{ipa} on vectors that are not a power of two, this would generally be the easiest way to achieve that.
-Though, this defeats the attempt of lowering the proof size, as it would now correspond to running an~\gls{ipa} on the size of the next power of two.
+This can also visually be seen in~\autoref{fig:fold}(b), which is Figure 1 of the Springproofs paper~\cite{zhang2024springproofs}.
+\autoref{fig:fold}(a) is a scheme function that pads the vector to the next power of two before running an~\gls{ipa}.
+If one wanted to run current~\glspl{ipa} on vectors that are not a power of two, this is the easiest way to achieve that.
+However, this defeats the attempt to lower the proof size, as it would now correspond to running an~\gls{ipa} on the size of the next power of two.
 
 \begin{figure*}[!htb]
     \centering
@@ -52,12 +52,12 @@ Though, this defeats the attempt of lowering the proof size, as it would now cor
     \label{fig:fold}%
 \end{figure*}
 
-It is worth mentioning that using the folding as shown in~\autoref{fig:fold}(b) results in the second recursive round being a size corresponding to a power of two.
-This means that the rest of the protocol will run as a general~\gls{ipa}, without the actual need for splitting the vectors, which can also be seen in~\autoref{lst:schemefunc}.
+It is worth mentioning that using the folding method, as shown in~\autoref{fig:fold}(b), results in the second recursive round being a size corresponding to a power of two.
+Therefore, the rest of the protocol runs as a general~\gls{ipa} without the actual need for splitting the vectors, which can also be seen in~\autoref{lst:schemefunc}.
 
 \subsection{CAAUrdleproofs}\label{subsec:approach-CAAUrdleproofs}
-With the idea from Springproofs in mind, we have made a modification to the~\gls{ipa} of Curdleproofs
-We call this modified protocol, CAAUrdleproof.
+With the idea from Springproofs in mind, we have modified the~\gls{ipa} of Curdleproofs
+We refer to this modified protocol as CAAUrdleproof.
 For generality and readability, we show the split of vectors happening every round.
 
 \subsubsection*{Prover computation}
@@ -105,12 +105,12 @@ return $(B_C,B_D,\mathbf{\pi},c,d)$ # Elements for verifier
 \label{fig:ipa-prover}
 \end{figure}
 First, we have step 1, which is the setup phase.
-It is done exactly the same way as in Curdleproofs.
+It is implemented the same way as in Curdleproofs.
 In line 2, the prover gets the cryptographic generators, $\mathbf{G}$, $\mathbf{G}'$ and $H$, which are going to be used for commitment constructions.
 To ensure zero-knowledge, two blinding vectors for each commitment are constructed on lines 3--4.
 These are also given the properties, $(\mathbf{r}_C\times \mathbf{d}+\mathbf{r}_D\times \mathbf{c})=0$~and~ $\mathbf{r}_C\times\mathbf{r}_D=0$, ensuring the completeness of the protocol.
 
-After this, commitments to the blinding vectors are constructed as $B_C$ and $B_D$, on lines 5--6.
+After this, commitments to the blinding vectors are constructed as $B_C$ and $B_D$ on lines 5--6.
 These will eventually be used for verification by the verifier.
 
 From the public input, hash values $\alpha,\beta$ are then computed on line 7.
@@ -121,7 +121,7 @@ On lines 8--10, the two vectors are then blinded and multiplied by the $\alpha$ 
 
 Now, the recursive proof construction, and step 2, begins.
 As explained, at the start of the recursive round, line 13, we find the split of the vectors on line 14, with $f(n)$ being the scheme function from~\autoref{lst:schemefunc}.
-Then on line 15, we find half the length of the $T$ set, as it is the set, we are doing the recursive folding round on.
+Then, on line 15, we find half the length of the $T$ set, as it is the set we are doing the recursive folding round on.
 Equally, on lines 16--19, we split our witness vectors and the group vectors using $T$ and $S$.
 
 After this, the prover constructs cross-commitment elements on lines 20--23 that are computed on the $T$ set.
@@ -129,7 +129,7 @@ These are added to the proof on line 24, which eventually is available to the ve
 They are also used to construct a hash value,~$\gamma_j$, in the next step on line 25.
 
 This value is used on lines 26--29 for completing the folding of $\mathbf{c},\mathbf{d},\mathbf{G},\mathbf{G'}$.
-We do the fold as in the original Curdleproofs protocol, while also appending the elements of $S$ back onto the vectors.
+We do the fold as in the original Curdleproofs protocol while also appending the elements of $S$ back onto the vectors.
 The figure shows a concatenation, but it is important to know that the vectors are appended together as shown in~\autoref{fig:fold}(b).
 
 At the end of the recursive round, on line 30,~$n$ is updated to the length of the concatenated vectors before starting a new round.
@@ -137,14 +137,14 @@ At the end of the recursive round, on line 30,~$n$ is updated to the length of t
 The result of this is a proof,~$\mathbf{\pi}$, constructed in $\lceil \log n \rceil$ rounds, but with the proof size being smaller than if the shuffle size was a power of 2.
 
 In step 3, lines 31--35, the folded vectors of size 1 are added to the proof as values as well as the commitments to the blinding values,~$B_C$ and~$B_D$.
-This is what is returned for the verifier to use for verification.
+The proof, folded vectors, and updated commitment are saved for the verifier to use for verification.
 
 
 The now constructed proof is then supposed to be added to the block in the chain at the given time slot~\cite{Whisk2024}.
 
 \subsubsection*{Verifier computation}
-Having the proof on the blockchain allows for each validator to asynchronously verify whether it is a valid proof.
-Again, the originally proposed verifying protocol has been modified according to Springproofs, which is seen in~\autoref{lst:ipa-verifier}.
+Having the proof on the blockchain allows for each validator to verify whether it is a valid proof asynchronously.
+Again, the initially proposed verification protocol has been modified according to Springproofs, as shown in~\autoref{lst:ipa-verifier}.
 
 \begin{figure}[!htb]
 \begin{lstlisting}[language=Python,mathescape=true,label={lst:ipa-verifier},numbers=left,caption={Verifier computation for CAAU-IPA in CAAUrdleproofs},captionpos=b,frame=single]
@@ -182,37 +182,37 @@ return 1 $\text{if both checks pass, else}$ return 0
 
 Many of the changes to the verifier protocol are equivalent to the ones made to the prover protocol.
 
-At step 1, the verifier sets up to run the protocol.
+In step 1, the verifier sets up to run the protocol.
 
 The verifier, on line 2, gets the same cryptographic generators used by the prover,~$\mathbf{G}$, $\mathbf{G}'$ and $H$, from the common reference string.
 Then, from the public input $\phi$, line 3, the verifier gets hold of the original commitments, $C$ and $D$, as well as the result of the inner product between $c$ and $d$.
 From the prover's proof, on line 4, the verifier gets the blinding commitments $B_C$ and $B_D$, the proof elements $\mathbf{\pi}$, and the folded vector values $c$ and $d$.
-With this, the verifier is able to compute the same~$\alpha$ and~$\beta$ challenges as the prover in line 5, as well as computing the same~$H$ generator on line 6.
+With this, the verifier can compute the same~$\alpha$ and~$\beta$ challenges as the prover in line 5, as well as computing the same~$H$ generator on line 6.
 
-Now the verifier updates the commitments~$C$ and~$D$ on lines 7--8.
-The reason being that on lines 7--8 in~\autoref{lst:ipa-prover}, the witness vectors are updated to be both blinded and multiplied by the challenge,~$\alpha$.
+Now, the verifier updates the commitments~$C$ and~$D$ on lines 7--8.
+The reason is that on lines 7--8 in~\autoref{lst:ipa-prover}, the witness vectors are updated to be both blinded and multiplied by the challenge,~$\alpha$.
 Those modifications mean that the commitments~$C$ and~$D$ need to be commitments to the modified witnesses instead.
 
-The setup phase is now done, and the verifier has to also run a recursive protocol, which is shown in step 2.
-First, the vectors are, on line 13, divided into the two sets,~$T$ and $S$, as in~\autoref{lst:ipa-prover}.
-After this, the group vectors are in lines 14--16 split in according to those sets, along with updating~$n$ to be half the size of~$T$.
+The setup phase is now complete, and the verifier then executes the recursive protocol, as shown in step 2.
+First, the vectors are divided into two sets,~$T$ and $S$, on line 13, as in~\autoref{lst:ipa-prover}.
+After this, the group vectors are in lines 14--16 split according to those sets, along with updating~$n$ to be half the size of~$T$.
 
 The verifier then, on line 17, retrieves from the proof the cross-product commitment update values for the given round,~$L_{C,j},L_{D,j},R_{C,j},R_{D,j}$.
 These are used for constructing a new commitment, lines 19--20, according to the fold made at round $i$.
 
-By fetching the cross-commitments of the round, the verifier is able to compute a challenge $\gamma_j$, line 18, made from the same public inputs as the prover.
+By fetching the cross-commitments of the round, the verifier can compute a challenge $\gamma_j$, line 18, made from the same public inputs as the prover.
 
-The corresponding left and right side cross-product are then, in lines 19--20, also multiplied by said challenge,~$\gamma_j,\gamma_j^{-1}$, respectively.
-By this time, the~$C$ and~$D$ commitments are a commitment to the original commitments along with the folded commitment.
+The corresponding left and right side cross-products are then, in lines 19--20, also multiplied by said challenge,~$\gamma_j,\gamma_j^{-1}$, respectively.
+By this time, the~$C$ and~$D$ commitments are a commitment to the original commitments, along with the folded commitment.
 
 $\mathbf{G,G'}$~are on lines 21--22 updated as in~\autoref{lst:ipa-prover} before the protocol on line 23 updates $n$ to be the length of the newly constructed vectors.
 
 As in the prover protocol, this is then repeated for $\lceil \log n \rceil$ rounds, after which the vectors have length $1$.
 
 At the end of the protocol, in step 3, the verifier now does its final check.
-From the prover, line 4, it has retreived the folded down $c$ and $d$ vectors.
-It therefore constructs commitments with those elements.
-So, it constructs $c\times G_1+cdH$ on line 26, which is the structure of the $C$ commitment as well as $d\times G'_1$ on line 27, which is the structure of the $D$ commitment.
+From the prover, line 4, it has received the folded down $c$ and $d$ vectors.
+It, therefore, constructs commitments with those elements.
+So, it constructs $c\times G_1+cdH$ on line 26, which is the structure of the $C$ commitment, as well as $d\times G'_1$ on line 27, which is the structure of the $D$ commitment.
 The verifier now checks if these commitments match the commitments that were constructed in the recursive part of the protocol.
 If so, the verifier accepts the proof.
 
@@ -245,27 +245,26 @@ A formal definition of the shuffle is given in~\autoref{fig:shuffle}.
 \end{figure}
 
 Here the set $(c_1, \ldots, c_n)$ is a set of ciphertexts that are shuffled over $T$ slots.
-In each slot $t$, a subset of the ciphertexts ${i_1, \ldots, i_\ell}$ is chosen randomly, shuffled, and added back to the list of ciphertexts.
+In each slot $t$, a subset of the ciphertexts ${i_1, \ldots, i_\ell}$ is chosen randomly, shuffled and added back to the list of ciphertexts.
 The shuffler then re-encrypts the ciphertexts and publishes them.
-This process is repeated for $T$ slots and the shuffle is complete.
-During the $T$ shuffles, some shufflers may be adversarial.
-This means that whenever the shuffling process is taking place, a part of the shuffles may be adversarial.
+This process is repeated for $T$ slots, and the shuffle is complete.
+During the $T$ shuffles, some shuffles may be adversarial.
 An adversary can choose to do anything with its shuffle, including not shuffling.
 Hence, an adversarial shuffle can be seen as no shuffling being done.
 Therefore, the number of honest shuffles that happen during the shuffle process is $T_H = T - \beta$, where $\beta$ is the number of adversarial shuffles.
 
 The adversary can also track cups.
-For instance, if some of the cups are owned by the adversary.
+For instance, if the adversary owns some of the cups.
 Those tracked cups are denoted by~$\alpha$, which is $\leq n$.
 
 The shuffle is secure if none of the following two events occur.
 The first event is a short backtracking, where an adversary can find the original ciphertexts from the shuffled ciphertexts.
 Since the subsets of ciphertexts are chosen randomly in each shuffle, if there are enough adversarial shufflers in a row at the end of the process, then a short backtracking is possible.
 
-The second event that can occur is related to the fact that every shuffle distributes the probability of a certain ciphertext to be in a certain slot.
-So, if a shuffle contains a lot of ciphertexts with a larger than average chance of containing a certain ciphertext, then that would imply that there is a higher chance of that ciphertext being in that slot.
+The second event that can occur is related to the fact that every shuffle distributes the probability of a specific ciphertext being in a particular slot.
+So, if a shuffle contains many ciphertexts with a larger-than-average chance of containing a specific ciphertext, then that would imply that there is a higher chance of that ciphertext being in that slot.
 
-It is theoretically possible to find a number of shuffles, given the shuffle size, and a number of adversarial shufflers, to guarantee that the shuffle is secure.
+It is theoretically possible to find a number of shuffles, given a shuffle size and a number of adversarial shufflers, which guarantees that the shuffle is secure.
 For any $0 < \delta < 1/3$, if $T \geq 20 n / \ell \ln(n/\delta) + \beta $ and $ \ell \geq 256 \ln^2(n/\delta)(1 - \alpha/n)^{-2}$.
 If $T$ and $\ell$ are chosen such that the above two conditions are met, then the protocol is an $(\epsilon , \delta)$-secure $(T,n,\ell)$-shuffle in the presence of a $(\alpha, \beta)$-adversary where $\epsilon = 2/(n-\alpha)$.
 
@@ -275,30 +274,29 @@ It is, however, possible to find lower secure values for $T$ and $\ell$, but thi
 
 
 \subsection{Implementation}\label{subsec:approach-implementation}
-Implementing the above-explained CAAUrdleproofs protocol required some optimizations, made by Curdleproofs, to have the code run as fast as possible.
+Implementing the above-explained CAAUrdleproofs protocol required some optimizations made by Curdleproofs to have the code run as fast as possible.
 These are explained in the following with a focus on how CAAUrdleproofs differentiates itself from Curdleproofs.
 Both our implementation of CAAUrdleproofs and the experiment involving the security of the shuffle are publicly available on GitHub~\footnote{\href{https://github.com/AAU-Dat/curdleproofsplus/tree/SIPA}{https://github.com/AAU-Dat/curdleproofsplus/tree/SIPA}}.
 The implementation of CAAUrdleproofs is a fork of and builds directly on the already existing Curdleproofs code.
 \subsubsection{CAAUrdleproofs}
 The protocol in Curdleproofs~\cite{Curdleproofs} introduces a lot of multiscalar multiplications.
-As such, CAAUrdleproofs also introduces these multiplications.
-This allows for checking calculations of the form:
+As such, CAAUrdleproofs also introduces these multiplications, allowing for checking calculations of the form:
 \begin{align}
     C\stackrel{?}{=}\mathbf{x}\times(\mathbf{g}\|\mathbf{h}\|G_T\|G_U\|H\|\mathbf{R}\|\mathbf{S}\|\mathbf{T}\|\mathbf{U})
 \end{align}
 As explained by Curdleproofs, the verifier computation can be significantly optimized by checking the multiscalar multiplications as a single check at the end of the protocol instead.
 
-CAAUrdleproofs differs on this topic in regard to the~\glspl{ipa},~\gls{sameperm} and~\gls{samemsm}.
-In each recursive round, both the folded vectors and the commitments are being multiplied by verification scalars, $\gamma_j$.
+CAAUrdleproofs differs on this topic regarding the~\glspl{ipa}~\gls{sameperm} and~\gls{samemsm}.
+In each recursive round, both the folded vectors and the commitments are multiplied by verification scalars,~$\gamma_j$.
 To keep track of which elements of the vectors are multiplied by each $\gamma_j$, a function called \texttt{get\_verification\_scalars\_bitstring} is used.
 The output of this function is a list of length $\ell$, each element with a list corresponding to the rounds in which $\gamma_j$ was multiplied to the element.
 Curdleproofs' implementation is simpler than CAAUrdleproofs' in this case.
 As Curdleproofs only works on powers of two, it is always the right half of the vectors in each round that are multiplied by the challenge.
 
 The multiplication of challenges on each element is not as easily trackable in the CAAUrdleproofs protocol.
-Here, it is necessary to simulate a run though the recursive protocol.
-Though, this should not have a big impact on performance, as it is run over vectors of small integers, and never actually has to do any multiplications.
-It is simply used as a measuring tool.
+Here, it is necessary to simulate a run through the recursive protocol.
+However, this should not have a significant impact on performance, as it is run over vectors of small integers and never actually requires any multiplications.
+It is used as a measuring tool.
 
 \begin{figure}[!htb]
         \begin{lstlisting}[language=Python,mathescape=true,label={lst:ipa-verifier-optimized},numbers=left,caption={Optimized verifier computation for CAAU-IPA in CAAUrdleproofs},captionpos=b,frame=single]
@@ -356,48 +354,49 @@ for $1\leq j\leq n$: #Same as Curdleproofs
     \label{fig:ipa-verifier-optimized}
 \end{figure}
 
-The protocol used in the implementation can be seen in~\autoref{lst:ipa-verifier-optimized}.
+The protocol used in the implementation is illustrated in~\autoref{lst:ipa-verifier-optimized}.
 A list, \texttt{ActivePos}, on line 32, keeps track of the original index placement and its position after each fold.
-Doing this, we can run the recursion and find the correct challenges for each index, while still knowing what the original index was.
+By doing this, we can run the recursion and find the correct challenges for each index while still knowing what the original index was.
 A bit matrix,~$b_{i,j}$, is constructed as in Curdleproofs, such that the vector, $\mathbf{s}$, is made in the same way for both protocols.
 
-The vector, $\mathbf{u}$, seen on line 3, is used for optimization in the grand product argument rather than $\mathbf{G'}$, and the \texttt{AccumulateCheck} function, on line 21 and 23, is used for the multiscalar multiplication optimization.
+The vector, $\mathbf{u}$, seen on line 3, is used for optimization in the grand product argument rather than $\mathbf{G'}$, and the \texttt{AccumulateCheck} function, on lines 21 and 23, is used for the multiscalar multiplication optimization.
 For a thorough explanation of these, we refer to Curdleproofs~\cite{Curdleproofs}.
 
 In Curdleproofs, both the~\gls{sameperm} and~\gls{samemsm} proof are recursive~\glspl{ipa}.
 So, the modifications and optimization used on the~\gls{sameperm} argument are also used on the~\gls{samemsm} argument.
-This includes the split into set $T$ and $S$ before recursion, and the construction of the bit matrix,~$b_{i,j}$, to keep track of multiplications on individual elements.
+The modifications include the split into set $T$ and $S$ before recursion and the construction of the bit matrix,~$b_{i,j}$, to keep track of multiplications on individual elements.
 
 It is also worth noting that the concatenation of $T$ and $S$ in the recursive phase, lines 26--29 in~\autoref{lst:ipa-prover}, is handled effectively in the code.
 Instead of concatenating, the computation uses pointers to the original vector, so it never practically concatenates.
 
-The code is also using the fact that the used scheme function will always end up with vectors being a power of two after the first round.
+The code also uses the fact that the used scheme function will always end up with vectors being a power of two after the first round.
 So, after the first round of recursion, we use the original algorithm code from Curdleproofs to run the rest of the protocol.
 
 \subsubsection{Shuffle Security}
-As mentioned in~\autoref{subsec:approach-shuffle-security}, the theoretically proven bound, on the necessary number of shuffles to ensure security is too high.
-Hence, as also done in~\cite{cryptoeprint:2022/560}, we implement an experiment to find the bounds, where the shuffle is secure.
+As mentioned in~\autoref{subsec:approach-shuffle-security}, the theoretically proven bound on the necessary number of shuffles to ensure security is too high.
+Hence, as also done in~\cite{cryptoeprint:2022/560}, we implement an experiment to find the bounds where the shuffle is secure.
 The goal of the experimental code is to find the number of honest shuffles required for security.
 
-We inherit the terminology introduced by Larsen et al.~\cite{cryptoeprint:2022/560}, and interpret each ciphertext as a cup that can contain water.
+We inherit the terminology introduced by Larsen et al.~\cite{cryptoeprint:2022/560} and interpret each ciphertext as a cup that can contain water.
 Each cup contains an amount of water between 0 and 1.
 
 An experiment run starts with the first cup being full and the rest being empty.
-As mentioned, $\alpha$ cups are tracked by an adversary, the first $n-\alpha$ cups are called active cups, while the last $\alpha$ cups are tracked.
+As mentioned, $\alpha$ cups are tracked by an adversary; the first $n-\alpha$ cups are called active cups, while the last $\alpha$ cups are tracked.
 So, at each shuffle, the shuffler randomly picks $\ell$ ciphertexts and shuffles them.
 Meanwhile, an average of the water between the active cups of the $\ell$-shuffle is found.
 All active cups are given this amount of water.
 
-Now, after each shuffle, if any cup has more than $2/(n-\alpha)$ water, its position can be predicted by the adversary, hence the shuffle is insecure~\cite{cryptoeprint:2022/560}.
+Now, after each shuffle, if any cup has more than $2/(n-\alpha)$ water, its position can be predicted by the adversary.
+Hence, the shuffle is insecure~\cite{cryptoeprint:2022/560}.
 If a position can be predicted, another round of shuffling is performed.
 This method is used until no cup exceeds the threshold, after which the shuffle is deemed secure.
 
-The experiment denotes how many rounds it took before the shuffle was secure.
+The experiment indicates the number of rounds before the shuffle was secure.
 
-By repeating this experiment for several runs, one can experimentally say, when a shuffle with given parameters is secure.
+By repeating this experiment for several runs, one can experimentally say when a shuffle with given parameters is secure.
 
 \subsubsection{Size reduction}
-If we can reduce the shuffle size used in Whisk and still prove it secure, then we expect to see some reduction in the size overhead on the blockchain.
+If we reduce the shuffle size used in Whisk and still prove it secure, then we expect to see a reduction in the size overhead on the blockchain.
 
 We first set our focus on Curdleproofs, as this is the protocol we have modified directly.
 As mentioned in~\autoref{subsec:related-work-whisk}, the size of Curdleproofs is $(18+10 \log(\ell+4))\mathbb{G}+7\mathbb{F}$.
@@ -408,10 +407,10 @@ In the proof of theorem 1, see Appendix~\ref{sec:appendix-thm1proof}, we show th
 However, as discussed in~\autoref{subsec:approach-CAAUrdleproofs}, CAAUrdleproofs'~\gls{ipa} proofs use $\lceil \log n \rceil$ recursive rounds.
 This means that the size of CAAUrdleproofs must be $(18+10 \lceil\log(\ell+4)\rceil)\mathbb{G}+7\mathbb{F}$.
 
-CAAUrdleproofs therefore has the same proof size as Curdleproofs.
+CAAUrdleproofs, therefore, has the same proof size as Curdleproofs.
 
 The CAAUrdleproofs modification can still reduce the overall block size overhead.
-By using the overhead calculation described by Whisk on CAAUrdleproofs, it measures a block overhead of $16.656$ KB, when the shuffle size is 128~\cite{Whisk2024}.
+By using the overhead calculation described by Whisk on CAAUrdleproofs, it measures a block overhead of $16.656$ KB when the shuffle size is 128~\cite{Whisk2024}.
 Note that this is the same size as Curdleproofs, as the shuffle size is a power of 2.
 The provided calculation of the block overhead is provided as the following, where $\mathbb{G}=48$ bytes and $\mathbb{F}=32$ bytes\footnote{\text{As noted in the code on the Curdleproofs GitHub repository: }\\ \href{https://github.com/asn-d6/curdleproofs/blob/main/src/whisk.rs}{https://github.com/asn-d6/curdleproofs/blob/main/src/whisk.rs}. Accessed: 26/05/2025}:
 \begin{itemize}
@@ -419,7 +418,7 @@ The provided calculation of the block overhead is provided as the following, whe
     \item Shuffle proof ($(18+10 \lceil\log(\ell+4)\rceil)\mathbb{G}+7\mathbb{F}\Rightarrow\text{eg. }(18+10\lceil\log(124+4)\rceil)\cdot48+7\cdot32=4,448$ bytes).
     \item A fresh tracker (two BLS G1 points $\Rightarrow48\cdot2=96$ bytes).
     \item A new commitment $com(k)$ to the proposer's tracker (one BLS G1 point $\Rightarrow48$ bytes).
-    \item A Discrete Logarithm Equivalence Proof on the ownership of the elected proposer commitment (two G1 points, two Fr scalars $\Rightarrow2\cdot48+2\cdot32=160$ bytes).
+    \item A Discrete Logarithm Equivalence Proof on the ownership of the elected proposer's commitment (two G1 points, two Fr scalars $\Rightarrow2\cdot48+2\cdot32=160$ bytes).
 \end{itemize}
 The majority of the block overhead comes from the list of shuffled trackers.
 Hence, as the list size is heavily dependent on~$\ell$, using CAAUrdleproofs could majorly decrease the block overhead by allowing~$\ell$ to be more flexibly chosen as a smaller size than 128.
